--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "boostrap": "^2.0.0",
     "bootstrap": "^5.3.3",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-router": "^7.1.5",
+    "react-router-dom": "^6.29.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
