--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.5.1",
+    "apexcharts": "^4.5.0",
     "boostrap": "^2.0.0",
     "bootstrap": "^5.3.3",
-    "react": "^18.2.0",          
-  "react-dom": "^18.2.0",   
+    "react": "^18.2.0",
+    "react-apexcharts": "^1.7.0",
+    "react-dom": "^18.2.0",
     "react-redux": "^9.2.0",
     "react-router": "^7.1.5",
     "react-router-dom": "^6.29.0"
